fix(ingestion): move --enable-preview to the entrypoint so nothing can strip it
radar-ingestion failed to start under docker compose. The flag was carried in
JAVA_TOOL_OPTIONS in the Dockerfile, and docker-compose.yml also sets that variable
to pin the heap. Compose replaces an image environment variable rather than
appending to it, so the compose value won, the flag disappeared, and the container
logged:

  Picked up JAVA_TOOL_OPTIONS: -Xmx256m

Startup then died as an UnsupportedClassVersionError wrapped in a
BeanCreationException, thirty frames deep, naming a class nobody was thinking
about, for one missing word on a command line. Every test passed. The build was
green.

The flag now lives on the ENTRYPOINT. It is not a tunable: the image cannot run
without it. An environment variable can be replaced wholesale by every layer above
the image, compose today and a systemd unit in stage 8, and every one of those
replacements is silent. An entrypoint is the one place none of them clobbers by
accident. The heap stays in JAVA_TOOL_OPTIONS, where overriding it is somebody's
intent rather than a silent amputation.

Two guards, because the comment that documented this was itself wrong and comments
do not fail builds. PreviewFlagWiringTest asserts at build time that the flag is on
the entrypoint, is not in ENV JAVA_TOOL_OPTIONS, that compose does not override the
entrypoint, and that the POM carries it for the compiler and both test JVMs;
reintroducing the original bug makes two of them fail. PreviewFeatures.requireEnabled
runs before Spring and loads the one preview compiled class deliberately, throwing a
single sentence that names the flag, the three places and ADR 0008 rather than a
class loading error inside a bean graph. It tests the condition rather than reading
JVM arguments, which would only report what was passed and not whether it worked.

Verified in a rebuilt container: entrypoint is
["java","--enable-preview","-jar","/app/radar-ingestion.jar"], JAVA_TOOL_OPTION